[package]
name = "pyramid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
criterion = "*"

[dev-dependencies]
criterion = "0.3"
rstest = "0.15.0"
rstest_reuse = "0.4.0"
pretty_assertions = "1.3.0"



[[bench]]
name = "my_benchmark"
harness = false
